--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.12",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.2",
+    "@portabletext/react": "^3.1.0",
+    "@sanity/astro": "^3.1.6",
+    "@sanity/client": "^6.22.4",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/visual-editing": "^2.7.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro": "^4.16.12",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sanity": "^3.64.1",
+    "sass": "^1.80.7",
     "typescript": "^5.6.3"
   }
 }
