--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/react": "^3.6.2",
     "@portabletext/react": "^3.1.0",
     "@sanity/astro": "^3.1.6",
